[package]
name = "plotters-wxdragon"
version = "0.1.0"
edition = "2024"
description = """Plotters backend for wxDragon, allowing drawing Plotters
graphs on wxWidgets device contexts."""
license = "Apache-2.0 OR MIT"
authors = ["dev-threefold <dev-threefold@fr.obakechan.net>"]
homepage = "https://github.com/dev-threefold/plotters-wxdragon"
repository = "https://github.com/dev-threefold/plotters-wxdragon"
keywords = ["plotters", "wxwidgets", "gui", "plotting", "drawing", "visualization"]

[dependencies]
thiserror = "1"
# See https://docs.rs/plotters-backend/latest/plotters_backend/#compatibility-note
plotters-backend = "^0.3"
wxdragon = "0.9"

[dev-dependencies]
anyhow = "1"
image = "0.25"
plotters = "^0.3"
