[package]
name = "plotters-wxdragon"
version = "0.1.0"
edition = "2024"
categories = ["graphics", "gui", "visualization"]
description = """Plotters backend for wxDragon, allowing drawing Plotters
graphs on wxWidgets device contexts."""
keywords = ["wxwidgets", "gui", "plotting", "drawing", "visualization"]
homepage = "https://github.com/dev-threefold/plotters-wxdragon"
include = ["/examples", "/src", "/tests", "LICENSE*", "NOTICE*", "README.md"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dev-threefold/plotters-wxdragon"

[dependencies]
thiserror = "1"
# See https://docs.rs/plotters-backend/latest/plotters_backend/#compatibility-note
plotters-backend = "^0.3"
wxdragon = "0.9"

[dev-dependencies]
anyhow = "1"
image = "0.25"
plotters = "^0.3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]

[badges]
maintenance.status = "experimental"
